2024-06-04, reload once for ibon.

--- a/www/settings.html
+++ b/www/settings.html
@@ -131,6 +131,15 @@
                         Cityline 只能使用 <code>chrome 瀏覽器</code> + <code>nodriver</code>。
                     </div>
                 </div>
+                <div class="row mb-3 bd-callout bd-callout-info disappear" data-under="ibon">
+                    <div class="col">
+                        <strong>備註：</strong>
+                        <ul>
+                            <li>ibon 只能使用 <code>chrome 瀏覽器</code> + <code>nodriver</code>。</li>
+                            <li>如果首頁設在 https://ticket.ibon.com.tw/ActivityInfo/Details/xxxx, 的 <code>日期頁面</code> 需要手動按一次重新整理頁面(F5).</li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="row mb-3">
                     <label for="ticket_number" class="col-sm-2 col-form-label">張數</label>
                     <div class="col-sm-10">
